objects/Contact.object
<CustomObject><fields>
        <fullName>Address_1_C__c</fullName>
        <label>Address 1 (C)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_1_H__c</fullName>
        <label>Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_2_C__c</fullName>
        <label>Address 2 (C)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_2_H__c</fullName>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_3_C__c</fullName>
        <label>Address 3 (C)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Address_3_H__c</fullName>
        <label>Address 3 (H)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BirthdateOnPassport__c</fullName>
        <label>Birthdate (On Passport)</label>
        <type>Date</type>
    </fields><fields>
        <fullName>City_C__c</fullName>
        <label>City (C)</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>City_H__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ContactEmergency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Emergency)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Emergency Contact)</relationshipLabel>
        <relationshipName>ContactsEmergencyContact</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CountryCurrent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country (C) Lookup</label>
        <referenceTo>BP_Country__c</referenceTo>
        <relationshipLabel>Contacts (Country Current)</relationshipLabel>
        <relationshipName>ContactsCounrtyC</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CountryHome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>BP_Country__c</referenceTo>
        <relationshipLabel>Contacts (Country Home)</relationshipLabel>
        <relationshipName>ContactsCountryHome</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Day_of_Birth__c</fullName>
        <formula>DAY( Birthdate )</formula>
        <label>Day of Birth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Dietary_Needs__c</fullName>
        <label>Dietary Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>EmergencyContactDetails__c</fullName>
        <formula>ContactEmergency__r.Email + '  |  ' + 'Mobile: ' +   ContactEmergency__r.MobilePhone + '  |  ' + 'Home: ' +   ContactEmergency__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emergency Contact Details</label>
        <type>Text</type>
    </fields><fields>
        <fullName>First_Name_Native__c</fullName>
        <inlineHelpText>The contacts first name written in their native language (with native characters)</inlineHelpText>
        <label>First Name (Native)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FurthestStepCompleted__c</fullName>
        <label>Furthest Step Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Insurance_Expiry_Date__c</fullName>
        <label>Insurance Expiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Insurance Number</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name_Native__c</fullName>
        <inlineHelpText>The contacts last name written in their native language (with native characters)</inlineHelpText>
        <label>Last Name (Native)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Maiden_name__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MailingLanguage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Language (Lookup)</label>
        <referenceTo>BP_Language__c</referenceTo>
        <relationshipLabel>Contacts (Mailing Language)</relationshipLabel>
        <relationshipName>ContactsMailingLanguage</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital  Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Seperated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Month_of_Birth__c</fullName>
        <formula>MONTH( Birthdate )</formula>
        <label>Month of Birth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>MotherTongue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mother Tongue</label>
        <referenceTo>BP_Language__c</referenceTo>
        <relationshipLabel>Contacts (Mother Tongue)</relationshipLabel>
        <relationshipName>ContactsMotherTongue</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Name_on_Passport__c</fullName>
        <label>Name on Passport</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>NationalityPrimary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nationality (Passport)</label>
        <referenceTo>BP_Country__c</referenceTo>
        <relationshipLabel>Contacts (Nationality Primary)</relationshipLabel>
        <relationshipName>ContactsNationalityPrimary</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>NationalitySecondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Nationality (If it's applicable)</label>
        <referenceTo>BP_Country__c</referenceTo>
        <relationshipLabel>Contacts (Nationality 2nd)</relationshipLabel>
        <relationshipName>ContactsNationalitySecondary</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>OnlineApplicationLanguage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web App Language</label>
        <referenceTo>BP_Language__c</referenceTo>
        <relationshipLabel>Contacts (Web App Language)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Passport_Expiry__c</fullName>
        <label>Passport Expiry</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Passport_Issued__c</fullName>
        <label>Passport Issued</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PersonalDetailsComplete__c</fullName>
        <inlineHelpText>This checkbox effects if they need to fill in their personal details in the web app or not.</inlineHelpText>
        <label>Personal Details Last Modified (AppUser)</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Phone_Work__c</fullName>
        <label>Phone Work</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>PhotoUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo Uploaded</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Photo__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))&amp; "servlet/servlet.FileDownload?file=" &amp;  Picture_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Picture_ID__c</fullName>
        <label>Picture ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>SpouseNameTextOnly__c</fullName>
        <label>Spouse Name</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Spouse Contact's name</description>
        <label>Spouse Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Spouse Name</relationshipLabel>
        <relationshipName>Spouse_Name1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>State_Province_C__c</fullName>
        <label>State/Province (C)</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Province_H__c</fullName>
        <label>State/Province</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>WebAppPicklistLanguage__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>한국어 (Korean)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Year_of_Birth__c</fullName>
        <formula>YEAR( Birthdate )</formula>
        <label>Year of Birth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ZIP_Postalcode_C__c</fullName>
        <label>ZIP/Postalcode (C)</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ZIP_Postalcode_H__c</fullName>
        <label>ZIP/Postalcode</label>
        <length>25</length>
        <type>Text</type>
    </fields></CustomObject>